# ebac_django_restframework

./: db.sqlite3  pyproject.toml
bookstore/: db.sqlite3  pyproject.toml  settings.py
bookstore/bookstore/: settings.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
